(update)myslq password

--- a/mysql/.env
+++ b/mysql/.env
@@ -1,6 +1,6 @@
 MYSQL_HOST = svc.gksl2.cloudtype.app
 MYSQL_PORT = 30710
 MYSQL_USERNAME = root
-MYSQL_PASSWORD = weeds_616
+MYSQL_PASSWORD = 12345
 MYSQL_DATABASE = kaisys
 MYSQL_LIMIT =10
